--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,10 @@
   font-family: "Hiragino Kaku Gothic ProN";
 }
 
+li {
+  list-style: none;
+}
+
 .container {
   width: 1170px;
   padding: 0 15px;
@@ -14,6 +18,10 @@
   padding: 30px 0;
 }
 
-.casting-item{
-  width: 0px;
+.casting-item {
+  float: left;
+}
+
+.casting-item img{
+  width: 150px;
 }
